--- a/html/index.html
+++ b/html/index.html
@@ -33,32 +33,30 @@
 			</div>
 		</header>
 		<div class="close-side"></div>
-		<section class="emotion">
-			<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_01_x1024.jpg?v=1562387417" alt="Header">
-		</section>
+		<section class="emotion" style="background-image: url(https://images.unsplash.com/photo-1470093717298-580960d32547?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80);"></section>
 		<div class="intro">
 			<div class="col">
 				<a href="">
 					<span class="title">Shoes</span>
-					<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_02_1024x.jpg?v=1562387567" alt="">
+					<img src="https://images.unsplash.com/photo-1570055923249-e9650abbddbb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
 				</a>
 			</div>
 			<div class="col">
 				<a href="">
-					<span class="title">Women's</span>
-					<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_03_1024x.jpg?v=1562387603" alt="">
+					<span class="title">Women</span>
+					<img src="https://images.unsplash.com/photo-1500483808507-66d90ee151b3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
 				</a>
 			</div>
 			<div class="col">
 				<a href="">
 					<span class="title">Sale</span>
-					<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_04_800x.jpg?v=1562387631" alt="">
+					<img src="https://images.unsplash.com/photo-1441986300917-64674bd600d8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
 				</a>
 			</div>
 			<div class="col">
 				<a href="">
-					<span class="title">Men's</span>
-					<img src="https://cdn.shopify.com/s/files/1/0062/5642/7093/files/demo05_05_800x.jpg?v=1562387661" alt="">
+					<span class="title">Men</span>
+					<img src="https://images.unsplash.com/photo-1490132328392-e6ef54a90dda?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
 				</a>
 			</div>
 		</div>
