--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
 		</header>
 		<div class="close-side"></div>
 		<section class="emotion" style="background-image: url(https://images.unsplash.com/photo-1470093717298-580960d32547?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1352&q=80);"></section>
-		<div class="intro">
+		<section class="intro">
 			<div class="col">
 				<a href="">
 					<span class="title">Shoes</span>
@@ -59,6 +59,46 @@
 					<img src="https://images.unsplash.com/photo-1490132328392-e6ef54a90dda?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="">
 				</a>
 			</div>
+		</section>
+		<div class="brands">
+			<ul>
+				<li>
+					<img src="img/logos/huf.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/logos/vans.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/logos/nike.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/logos/girl.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/logos/converse.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/logos/volcom.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/logos/dc.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/logos/baker.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/logos/rvca.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/logos/bones.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/logos/welcome.jpg" alt="">
+				</li>
+				<li>
+					<img src="img/logos/thrasher.jpg" alt="">
+				</li>
+			</ul>
 		</div>
 	<script src="js/main.js"></script>
 	</body>
