--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="UTF-8">
 		<title>Shopping Cart - Frontend</title>
+		<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="css/styles.css">
 	</head>
 	<body>
