--- a/html/index.html
+++ b/html/index.html
@@ -162,6 +162,8 @@
 				</div>
 			</div>
 			<div class="col right">
+				<h3>Newsletter</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 				<form action="">
 					<input type="mail" placeholder="E-Mail">
 					<button>Sign Up</button>
